04/13/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.6 'Marshal West':
	- Addresses logging fixed.
	- Redis admin options fixed.
	- Redis compilation cleaned.

04/07/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.5 'Marshal West':
	- Mobile allocation quota fixed (issue 121);
	- --simple-log option added (Issue 122);
	- documentation fixes (REST API, Redis).

04/06/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.4 'Marshal West':
	- Mobile TCP sessions fixed (issue 120);
	- log information improvements.

04/04/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.3 'Marshal West':
	- Pkey and cert file descriptors to be closed 
	on initialization (issue 118);
	- Address bind indefinite cycle on start-up fixed
	(Issue 119);
	- Allocation counters time lag improved.
	
03/30/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.2 'Marshal West':
	- Allocation counters fixed (issue 117);
	- a possible core dump in the server code fixed;
	- a possible memory leak in server fixed.
	
03/29/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.1 'Marshal West':
	- TCP congestion avoidance completed.
	- Read and write streams are treated separately in
	bandwidth control.
	- Test client fixed.
	- Experimental SHA256 key storage supported.

03/17/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.2.912 'Marshal West':
	- TCP-in-TCP congestion avoidance implemented.
	- UDP-in-TCP congestion avoidance improved.
	- Alternate-server code cleaned.

03/10/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.2.911 'Marshal West':
	- "Congestion control" for UDP-inside-TCP tunneling;
	- memory management improvements;
	- socket logging improvements;
	- debug info added to CentOS and Fedora RPMs;
	- TCP traffic buffering improved;
	- Thread barriers cleaned;
	- TCP memory leak fixed;
	- minor TCP test client improvement.

03/09/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.2.910 'Marshal West':
	- Log messages extended and cleaned.